[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/main/world/OverworldBg.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/world/puzzle-world.gd" type="Script" id=2]
[ext_resource path="res://src/main/world/restaurant/restaurant-puzzle-scene.gd" type="Script" id=3]
[ext_resource path="res://src/main/world/environment/EmptyEnvironment.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/main/world/restaurant/door-chime.gd" type="Script" id=5]

[node name="RestaurantPuzzleScene" type="Node"]
script = ExtResource( 3 )

[node name="Bg" parent="." instance=ExtResource( 1 )]

[node name="World" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Environment" parent="World" instance=ExtResource( 4 )]

[node name="DoorChime" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 130, 314 )
volume_db = -4.0
max_distance = 6000.0
bus = "Sound Bus"
script = ExtResource( 5 )

[node name="ChimeTimer" type="Timer" parent="DoorChime"]
one_shot = true

[node name="SuppressSfxTimer" type="Timer" parent="DoorChime"]
one_shot = true

[connection signal="timeout" from="DoorChime/ChimeTimer" to="DoorChime" method="_on_ChimeTimer_timeout"]
